# kvasir

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  DESIGN.md  README.md  UPSTREAM_YMIR.md  build.sh
.github/workflows/: capture-tests.yaml  firmware.yaml  host.yaml  tools-tests.yaml  unit-tests.yaml
docker/firmware/: Dockerfile
docker/tests/: Dockerfile
firmware/: CMakeLists.txt  CMakePresets.json
firmware/app/: app.cpp  app.hpp  channels.hpp  frame.cpp  frame.hpp  protocol.hpp  ring_buffer.hpp
firmware/app/hal/: adc_hal.cpp  led_hal.cpp  mmio.hpp  usb_cdc_hal.cpp
firmware/app/interfaces/: iadc.hpp  iusb.hpp
firmware/cmake/: gcc-arm-none-eabi.cmake
firmware/cubemx/: .mxproject  cubemx.ioc  kvasir.ioc
firmware/cubemx/Core/Inc/: i2c.h  spi.h  stm32f4xx_hal_conf.h
firmware/cubemx/Core/Src/: adc.c  gpio.c  i2c.c  main.c  spi.c  usart.c
firmware/cubemx/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc/: usbd_cdc.h
firmware/cubemx/Middlewares/ST/STM32_USB_Device_Library/Core/Inc/: usbd_def.h
firmware/cubemx/USB_DEVICE/App/: usb_device.c  usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c  usbd_desc.h
firmware/cubemx/cmake/: gcc-arm-none-eabi.cmake
firmware/cubemx/cmake/stm32cubemx/: CMakeLists.txt
host/: CMakeLists.txt
host/src/: capture.cpp  frame_parser.cpp  frame_parser.hpp
scripts/: run-tidy.sh
tests/capture/: conftest.py  test_capture.py
tests/tools/: example.yaml  test_config.py  test_frame_parser.py  test_monitor.py  test_session.py
tests/unit/: CMakeLists.txt  test_frame.cpp  test_frame_parser.cpp  test_pipeline.cpp  test_ring_buffer.cpp
tests/unit/stubs/: adc_stub.cpp  led_stub.cpp  usb_stub.cpp  usb_stub.hpp  ymir_stub.cpp
tools/: config.py  example.yaml  frame_parser.py  monitor.py  monitor.sh  protocol.py  requirements.txt  session.py
tools/monitor/: README.md  __init__.py  config.py  example.yaml  frame_parser.py  monitor.py  protocol.py  run  session.py
